--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/toshi1127/React_Redux_Study/issues"
   },
-  "homepage": "https://github.com/toshi1127/React_Redux_Study#readme"
+  "homepage": "https://github.com/toshi1127/React_Redux_Study#readme",
+  "dependencies": {
+    "redux": "^4.0.0"
+  }
 }
