--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/toshi1127/React_Redux_Study#readme",
   "dependencies": {
     "redux": "^4.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1"
   }
 }
