--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "react-redux": "^4.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
