--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/toshi1127/React_Redux_Study#readme",
   "dependencies": {
+    "history": "^4.7.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "redux": "^4.0.0",
-    "react-redux": "^4.4.2"
+    "react-redux": "^4.4.2",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
