--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^4.4.2",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-action-watch": "^1.0.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
