--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
     "redux-action-watch": "^1.0.6",
+    "redux-logger": "^3.0.6",
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
