--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/toshi1127/React_Redux_Study#readme",
   "dependencies": {
     "history": "^4.7.2",
+    "material-ui": "^1.0.0-beta.30",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^4.4.2",
@@ -24,6 +25,7 @@
     "redux": "^4.0.0",
     "redux-action-watch": "^1.0.6",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2",
