--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.30",
     "react": "^16.3.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.3.2",
     "react-redux": "^4.4.2",
     "react-router-dom": "^4.2.2",
